# gEInk

./: .clang-format  .gitignore  .pre-commit-config.yaml  GEMINI.md  README.md  batch_pointillize.py  example_espslider.sh  example_simpleloader.sh  image_processor.py  image_to_read.image  pyproject.toml  requirements.txt  run.sh  run_upload.sh
ESPSlider/: ESPSlider.ino  epd.h  epd13in3.h  epd2in13.h  epd2in9.h  epd4in2.h  epd7in5.h  epd_minimal.h  scripts.h
SimpleLoader/: SimpleLoader.ino  upload_to_epd.py
render/: package-lock.json  package.json
render/src/: pointillism.ts  render.ts
src/: ascii_art_toolkit.py  config.py  convert_toolkit.py  dithering_toolkit.py  edge_cutter.py  geink.py  grid_cutter.py  pointillism_toolkit.py  preprocess_toolkit.py
tests/: a.avif  conftest.py  test_cli.py  test_dithering.py  test_pipeline.py  test_preprocess.py
tests/01/: 01_ascii.txt
tests/bubu/: bubu_ascii.txt
tests/bubu_sce/: bubu_sce_ascii.txt
toolkits/: dithering_toolkit.py  preprocess_toolkit.py
tools/: bin_to_c_array.py
