[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eink-image-processor"
version = "0.1.0"
authors = [
  { name="guozr", email="" }
]
description = "一个用于电子墨水屏图片的预处理工具"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "opencv-python",
    "loguru",
    "click",
    "numpy",
]

[project.scripts]
eink-process = "image_processor:eink_process"

[tool.setuptools]
py-modules = ["image_processor"]