[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eink-image-processor"
version = "0.1.0"
authors = [
  { name="guozr", email="guozr1997@hotmail.com" }
]
description = "一个用于电子墨水屏图片的预处理工具"
readme = "README.md"
requires-python = ">=3.10.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "opencv-python",
    "loguru",
    "click",
    "numpy",
    "dotenv (>=0.9.9,<0.10.0)",
]

[project.scripts]
geink = "src.geink:cli"

[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = [
    "isort (>=7.0.0,<8.0.0)",
    "ruff (>=0.15.0,<0.16.0)",
    "autoflake (>=2.3.1,<3.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.pytest.ini_options]
markers = [
    "test_img: marks tests that use real test images (deselect with '-m \"not test_img\"')"
]
